; ModuleID = '/home/carl/AnghaBench/obs-studio/plugins/obs-filters/extr_scroll-filter.c_scroll_filter_width.c'
source_filename = "/home/carl/AnghaBench/obs-studio/plugins/obs-filters/extr_scroll-filter.c_scroll_filter_width.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.scroll_filter_data = type { i32, i64, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*)* @scroll_filter_width to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @scroll_filter_width(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.scroll_filter_data*, align 8
  %4 = alloca i32*, align 8
  store i8* %0, i8** %2, align 8
  %5 = load i8*, i8** %2, align 8
  %6 = bitcast i8* %5 to %struct.scroll_filter_data*
  store %struct.scroll_filter_data* %6, %struct.scroll_filter_data** %3, align 8
  %7 = load %struct.scroll_filter_data*, %struct.scroll_filter_data** %3, align 8
  %8 = getelementptr inbounds %struct.scroll_filter_data, %struct.scroll_filter_data* %7, i32 0, i32 2
  %9 = load i32, i32* %8, align 8
  %10 = call i32* @obs_filter_get_target(i32 %9)
  store i32* %10, i32** %4, align 8
  %11 = load %struct.scroll_filter_data*, %struct.scroll_filter_data** %3, align 8
  %12 = getelementptr inbounds %struct.scroll_filter_data, %struct.scroll_filter_data* %11, i32 0, i32 1
  %13 = load i64, i64* %12, align 8
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %19

15:                                               ; preds = %1
  %16 = load %struct.scroll_filter_data*, %struct.scroll_filter_data** %3, align 8
  %17 = getelementptr inbounds %struct.scroll_filter_data, %struct.scroll_filter_data* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 8
  br label %22

19:                                               ; preds = %1
  %20 = load i32*, i32** %4, align 8
  %21 = call i32 @obs_source_get_base_width(i32* %20)
  br label %22

22:                                               ; preds = %19, %15
  %23 = phi i32 [ %18, %15 ], [ %21, %19 ]
  ret i32 %23
}

declare dso_local i32* @obs_filter_get_target(i32) #1

declare dso_local i32 @obs_source_get_base_width(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
